// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`health schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  should have required property 'health'
    Path:     health.schema.json#/required
"
`;

exports[`health schema (1) match fails for invalid config -> health is missing: health is missing 1`] = `
"expect(received).toMatchSchema(schema)

received
  should have required property 'health'
    Path:     health.schema.json#/required
"
`;

exports[`health schema (2) match fails for invalid config -> health is not within enum: health is not within enum 1`] = `
"expect(received).toMatchSchema(schema)

received
  .health should be equal to one of the allowed values
    Expected: [\\"NORMAL_0\\",\\"FAILURE_1\\",\\"CHECK_FUNCTION_2\\",\\"OFF_SPEC_3\\",\\"MAINTENANCE_REQUIRED_4\\"]
    Received: <string> blub
    Path:     health.schema.jsonDeviceHealthEnumeration.schema.json/enum
"
`;

exports[`health schema (3) match fails for invalid config -> health score is larger 100: health score is larger 100 1`] = `
"expect(received).toMatchSchema(schema)

received
  .healthScore should be <= 100
    Received: <number> 101
    Path:     health.schema.json#/properties/healthScore/maximum
"
`;

exports[`health schema (4) match fails for invalid config -> health score is negative: health score is negative 1`] = `
"expect(received).toMatchSchema(schema)

received
  .healthScore should be >= 0
    Received: <number> -1
    Path:     health.schema.json#/properties/healthScore/minimum
"
`;

exports[`health schema (5) match fails for invalid config -> swapped key and value: swapped key and value 1`] = `
"expect(received).toMatchSchema(schema)

received
  .health should be string
    Received: <number> 0
    Path:     health.schema.jsonDeviceHealthEnumeration.schema.json/type
  .health should be equal to one of the allowed values
    Expected: [\\"NORMAL_0\\",\\"FAILURE_1\\",\\"CHECK_FUNCTION_2\\",\\"OFF_SPEC_3\\",\\"MAINTENANCE_REQUIRED_4\\"]
    Received: <number> 0
    Path:     health.schema.jsonDeviceHealthEnumeration.schema.json/enum
  .healthScore should be integer
    Received: <string> CHECK_FUNCTION_2
    Path:     health.schema.json#/properties/healthScore/type
"
`;
